--- a/jni-android-sys-gen/cli.yml
+++ b/jni-android-sys-gen/cli.yml
@@ -7,10 +7,9 @@ args:
         long: help
         help: Prints help information
 
-    - directory:
-        long: directory
-        help: Sets a custom directory
-        value_name: DIR
+    - output-path:
+        long: output-path
+        help: Where to put the generated bindings
         takes_value: true
 
     - verbose:
@@ -20,18 +19,22 @@ args:
     - min-api-level:
         long: min-api-level
         help: The minimum Android API level to generate/verify
-        value_name: API_LEVEL
         takes_value: true
 
     - max-api-level:
         long: max-api-level
         help: The maximum Android API level to generate/verify
-        value_name: API_LEVEL
+        takes_value: true
+
+    - android-sdk:
+        long: android-sdk
+        help: Android SDK directory
         takes_value: true
 
 subcommands:
     - generate:
         about: Generates jni-android-sys
+
     #- verify:
     #    about: Verifies an existing jni-android-sys matches exactly
     #    args:
